# RustDiskAnalyzer

./: Cargo.toml  README.md
src/: main.rs
src/helpers/: app.rs  constants.rs  context.rs  mod.rs  path.rs  sort.rs
src/structs/: disk.rs  file.rs  mod.rs
src/widgets/: collapsing.rs  left_panel.rs  mod.rs  right_panel.rs  top_panel.rs
