[package]
name = "file-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#eframe = "0.19.0"
#egui = "0.19.0"
#egui_extras = "0.19.0"
#rust_search = "2.0.0"
#fltk = "^0.7"
#fltk-egui = "0.8" # targets egui 0.19

[dependencies]
egui = "0.19"
egui_glow = { version = "0.19", default-features = false }
arboard = { version = "2", default-features = false }
egui_extras = "0.19.0"
rust_search = "2.0.0"
eframe = "0.19.0"
fltk = { version = "^1.3", git = "https://github.com/fltk-rs/fltk-rs" }


# for the demo_windows example
[dev-dependencies]
egui_demo_lib = "0.19"
three-d = "0.13"
